--- a/habilidades/habilidades-icones.css
+++ b/habilidades/habilidades-icones.css
@@ -2,5 +2,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 200px;
+    margin-right: 250px;
+    margin-left: 250px;
 
 }
