--- a/apresentacao/apresentacao-texto.css
+++ b/apresentacao/apresentacao-texto.css
@@ -10,3 +10,13 @@
     
     
 }
+
+@media (max-width:768px){
+    .apresentacao_texto{
+        font-size: 20px;
+        display: flex;
+        padding: 0 0 0 ;
+        margin: 0 0 0;
+        padding: 15px;
+    }
+}
