--- a/apresentacao/apresentacao.css
+++ b/apresentacao/apresentacao.css
@@ -1,8 +1,22 @@
 .apresentacao{
   
-background-color: black;
-height: 100vh;
+height: 100vh;  
+padding-top: 30vh;
 
 
 
+
+
+}
+
+@media (max-width:768px){
+    .apresentacao{
+        padding: 0 0 0;
+        margin: 0 0 0;
+        padding-left: 5px;
+        padding-right: 10px;
+        margin-left: 10px;
+        margin-right: 5px;
+        height: 60vh;
+    }
 }
