--- a/banner/banner-imagem.css
+++ b/banner/banner-imagem.css
@@ -1,8 +1,20 @@
 .banner_imagem{
+
     width: 300px;
     height: 300px;
     border-radius: 50%;
     margin-top: 150px;
     border: 5px solid aquamarine;
     
+}
+
+@media (max-width: 768px) {
+    .banner_imagem{
+        width: 200px;
+        height: 200px;
+        margin-left: 45px;
+        margin-top: -30vh
+    
+        
+    }
 }
