--- a/banner/texto-principal.css
+++ b/banner/texto-principal.css
@@ -23,3 +23,13 @@ font-size: 50px;
         opacity: 0;
     }
 }
+
+@media (max-width:768px){
+    .texto_principal{
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        margin-top: -50vh;
+    }
+}
+
