--- a/habilidades/habilidades-icones.css
+++ b/habilidades/habilidades-icones.css
@@ -6,3 +6,12 @@
     margin-left: 250px;
 
 }
+
+@media(max-width:768px){
+    .habilidades-icones{
+        margin: 0 0 0;
+        padding: 0 0 0;
+        padding-top: 15vh;
+    }
+
+    }
