--- a/menu/cabecalho.css
+++ b/menu/cabecalho.css
@@ -1,20 +1,60 @@
-.cabecalho{
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    padding-left: 2em;
-    padding-right: 2em;
-    background-color: black;
-    height: 100px;
-    width: 100%;
-    
 
+.cabecalho{
+    margin: 0;
+    padding: 0;
+    position: fixed;
+}
+
+.menu_link{
+    color: aquamarine;
+    text-decoration: none;
+    border-bottom: 1px solid transparent;
+    padding-bottom: 2.5vh;
+    transition: border-bottom-color 0.3s ease-in-out;
 
 }
 
-h1{
-    color: aquamarine;
-    padding: 2,5px;
-    margin-top: 30px;
+.menu_link:hover{
+    color: white;
+    border-bottom-color: aquamarine ;
+}
+
+.logo{
+    margin-left: -150px;
     font-size: 30px;
+    text-transform: uppercase;
+    color: aquamarine;
+}
+
+.menu{
+    background-image: linear-gradient(to bottom, #222831,#393E46 );
+    position: fixed;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 15vh;
+}
+
+.lista-menu{
+    margin-right: -150px;
+    list-style: none;
+    display: flex;
+}
+
+.item_menu{
+    font-size: 20px;
+    letter-spacing: 3px;
+    margin-left: 32px;
+}
+
+@media (max-width:768px) {
+    .item_menu{
+        display: none;
+    }
+
+    .logo{
+        margin-left: 40px;
+    }
+    
 }
